--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.radar{
+  text-align: center;
+  width: 100%;
+  background-color: pink;
+  color: black;
+  font-weight: bold;
+  font-size: large;
+}
